fix: sound toggle button is now visible in dark mode

--- a/css/cashman.css
+++ b/css/cashman.css
@@ -1,5 +1,5 @@
 body.dark {
-    background: #333;
+    background: #000;
 }
 
 .gamewrapper {
@@ -195,6 +195,10 @@ body.dark {
     text-align: center;
     width: 50px;
     display: inline-block;
+}
+.dark #scoreboard .soundToggle a {
+    border-color: #fff;
+    color: #fff;
 }
 
 #scoreboard .life {
